objects/CCPA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Authorized_Agent_Email__c</fullName>
        <label>Authorized Agent Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_First_Name__c</fullName>
        <label>Authorized Agent First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_Last_Name__c</fullName>
        <label>Authorized Agent Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_Phone__c</fullName>
        <label>Authorized Agent Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categor__c</fullName>
        <label>Requested Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Categories collected</fullName>
                </value>
                <value>
                    <fullName>Categories of sources</fullName>
                </value>
                <value>
                    <fullName>Purpose of collecting</fullName>
                </value>
                <value>
                    <fullName>Categories sold</fullName>
                </value>
                <value>
                    <fullName>Categories of Third parties</fullName>
                </value>
                <value>
                    <fullName>Specific pieces of information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Request_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitting_on_behalf_of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitting on behalf of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CCPA Request</label>
    <nameField>
        <displayFormat>CCPA-{0000}</displayFormat>
        <label>CCPA Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCPA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>